packages/ui/src/components/bundle-packages/bundle-packages.module.css
.title {
  color: var(--color-text-light);
}

.toolbar {
  border-bottom: 1px solid var(--color-outline);
}

.toolbarSearch {
  width: 100%;
  max-width: 240px;
  margin-right: -1px; /** collapse border */
}

.packageName {
  display: inline-block;
  color: var(--color-text-light);
}

.packageName:last-child {
  color: inherit;
}

.packageName + .packageName::before {
  display: inline-block;
  margin: 0 var(--space-xxxsmall);
  content: '/';
  color: var(--color-text-ultra-light);
}

.packageNameTagDuplicate {
  margin-right: var(--space-xxxsmall);
  vertical-align: middle;
}

.packageNameLabel {
  vertical-align: middle;
}

.packageNameTagDuplicate::before {
  content: 'd';
}


.packagePopover {
  min-width: 320px;
}

.packagePopoverTitleIndex {
  color: var(--color-text-light);
  font-weight: normal;
}

.packagePopoverPathValue {
  padding: var(--space-xxxsmall);
  background: var(--color-highlight-warning);
  font-family: var(--font-family-monospace);
}

.packagePopoverList {
  padding: 0;
  list-style: inside;
}

